--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
+    "gsap": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-gsap": "^2.2.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
