--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
     "get-google-fonts": "^1.2.2",
+    "graphql": "^15.3.0",
     "gsap": "^3.5.1",
     "html-react-parser": "^0.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
     "react-lazy-load-image-component": "^1.5.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
