--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
     "react-lazy-load-image-component": "^1.5.0",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
