--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
+    "react-images": "^1.1.7",
     "react-lazy-load-image-component": "^1.5.0",
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.2.1",
