--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-gsap": "^2.2.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-tabs": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
