--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^15.3.0",
     "gsap": "^3.5.1",
     "html-react-parser": "^0.14.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -27,7 +28,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll-up": "^1.3.5",
+    "react-swipeable-views": "^0.13.9",
     "react-tabs": "^3.1.1",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "typesafe-actions": "^5.1.0"
   },
