--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^15.3.0",
     "gsap": "^3.5.1",
     "html-react-parser": "^0.14.0",
+    "node-sass": "4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
