--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "graphql": "^15.3.0",
     "gsap": "^3.5.1",
     "html-react-parser": "^0.14.0",
+    "i18next": "^20.2.1",
+    "i18next-browser-languagedetector": "^6.1.0",
     "node-sass": "4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
+    "react-i18next": "^11.8.12",
     "react-images": "^1.1.7",
     "react-lazy-load-image-component": "^1.5.0",
     "react-photo-gallery": "^8.0.0",
