--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apexcharts": "^3.26.0",
     "bootstrap": "^4.5.3",
     "framer-motion": "^2.9.5",
     "get-google-fonts": "^1.2.2",
@@ -21,6 +22,7 @@
     "i18next-browser-languagedetector": "^6.1.0",
     "node-sass": "4.14.1",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
