--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll-up": "^1.3.5",
+    "react-search-autocomplete": "^5.0.5",
     "react-swipeable-views": "^0.13.9",
     "react-tabs": "^3.1.1",
     "redux": "^4.0.5",
