--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-swipeable-views": "^0.13.9",
     "react-tabs": "^3.1.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "styled-component": "^2.8.0",
     "typesafe-actions": "^5.1.0"
   },
